service-skeleton_derive/tests/ui/unknown_field_attr.stderr
error: Unknown field: `something`
 --> tests/ui/unknown_field_attr.rs:6:11
  |
6 |     #[config(something)]
  |              ^^^^^^^^^
